# OSDev-OmriOS

./: CMakeLists.txt
include/: cond_utils.h  exceptions.h
include/kernel/: exceptions.h  mm.h  multiboot2.h
include/kernel/boot/: bootmem.h
include/kernel/memory/: kalloc.h  palloc.h
include/kernel/video/: ind.h  pixel.h  psf.h  rgb.h  screen.h  terminal.h  vga.h
include/stdlib/: string.h
scripts/: generate_iso.sh
source/: CMakeLists.txt
source/bootloader/: CMakeLists.txt
source/bootloader/custom/: CMakeLists.txt  mbr.S  mbr.c
source/bootloader/grub/: CMakeLists.txt  generate_iso.sh
source/kernel/: CMakeLists.txt  entry.S  exceptions.h  kernel_main.c  linker.ld  multiboot_utils.c  string.c  string.h  terminal.c  terminal.h
source/kernel/boot/: entry.S  kernel_main.c  multiboot_utils.c
source/kernel/boot/memory/: bootmem.c  kalloc.c
source/kernel/boot/video/: indexed.c  psf.c  rgb.c  screen.c  terminal.c  vga.c
source/kernel/memory/: kalloc.c  palloc.c
source/kernel/video/: pixel.c  screen.c  terminal.c
source/stdlib/: CMakeLists.txt  string.c
